# rust-rpa-poc

./: .gitignore  .sqlfluff  Cargo.toml  README.md  bacon.toml  binding-request-event-example.json  cloudbuild.yaml  compose.yaml  debug.sh  package.json  pubsub-request-example.json  rust-chromium.Dockerfile  rustfmt.toml  session-man.Dockerfile  sync_rust_project.sh
binding/: Cargo.toml  env-example
binding/src/: error.rs  handler.rs  main.rs  models.rs  repo.rs  routes.rs  rpa.rs  service.rs
binding/src/handler/: binding_req.rs  mod.rs
binding/src/repo/: add_policy.rs  mod.rs  models.rs
binding/src/rpa/: check_privilege.rs  mod.rs  models.rs
binding/src/svc/: add_policy.rs  models.rs
binding/src/sys/: app_state.rs  application_config.rs  config.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  utils.rs
common/src/gcp/: pubsub.rs
common/src/protocol/: mod.rs
common/src/protocol/biz_priv/: category.rs  mod.rs
common/src/protocol/biz_priv/binding/: binding_data.rs  binding_request.rs  binding_result.rs  mod.rs  privilege.rs
common/src/protocol/biz_priv/eligibility/: checking_request.rs  checking_response.rs
common/src/protocol/gcp/: mod.rs  pubsub_push_message.rs
common/src/protocol/generali/: models.rs
common/src/protocol/iam/: user_identity.rs
database/psql/script/: 20250723_001-create-tables.sql  20250723_002-create-funcs.sql  20250723_003-seed-master-data.sql
infra/: create-bride-vm.sh  run.sh  session-man.service.yaml
it/http/: binding.http
protocol/: Cargo.toml
protocol/src/: category.rs  lib.rs
protocol/src/binding/: binding_data.rs  binding_request.rs  mod.rs
protocol/src/biz_priv/binding/: binding_request.rs  privilege.rs
protocol/src/biz_priv/eligibility/: checking_request.rs  mod.rs
protocol/src/eligibility/: checking_request.rs  checking_response.rs  mod.rs
protocol/src/gcp/: pubsub_push_message.rs
protocol/src/iam/: user_identity.rs
session-man-rs/: Cargo.toml
session-man-rs/src/: main.rs
session_man/: Cargo.toml  env-example
session_man/src/: config.rs  http_server  main.rs  rpa.rs
