[package]
name = "binding"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "time"] }
actix-web = "4.11.0"
serde = "1.0.219"
serde_json = "1.0.141"
protocol = { path = "../protocol" }
config = "0.15.13"
dotenvy = "0.15.7"
base64 = "0.22.1"
futures = "0.3.31"
time = "0.3.41"
chromiumoxide = { version = "0.7.0", features = ["_fetcher-native-tokio", "tokio-runtime"] }
