[package]
name = "binding"
version = "0.1.0"
edition = "2024"

[dependencies]
chromiumoxide = { version = "0.7.0", features = [
  "_fetcher-native-tokio",
  "tokio-runtime",
] }
sqlx = { version = "0.8.6", features = ["postgres", "time"] }
actix-web = "4.11.0"
serde = "1.0.219"
serde_json = "1.0.141"
common = { path = "../common" }
config = "0.15.13"
dotenvy = "0.15.7"
base64 = "0.22.1"
futures = "0.3.31"
time = { version = "0.3.41", features = ["serde"] }
google-cloud-pubsub = { package = "gcloud-pubsub", version = "1.3.0" }
log = "0.4.27"
derive_more = { version = "2.0.1", features = ["display"] }
tokio = { version = "1.47.0", features = ["full", "signal"] }
thiserror = "2.0.12"
