[package]
name = "binding"
version = "0.1.0"
edition = "2024"

[dependencies]
chromiumoxide = { version = "0.7.0", features = ["tokio-runtime"] }
sqlx = { version = "0.8.6", features = ["postgres", "time", "runtime-tokio"] }
actix-web = "4.11.0"
serde = "1.0.219"
serde_json = "1.0.141"
common = { path = "../common" }
envy = "0.4.2"
dotenvy = "0.15.7"
base64 = "0.22.1"
futures = "0.3.31"
time = { version = "0.3.41", features = ["serde"] }
google-cloud-pubsub = { version = "0.30.0" }
log = "0.4.27"
derive_more = { version = "2.0.1", features = ["display"] }
tokio = { version = "1.47.0", features = ["full"] }
thiserror = "2.0.12"
google-cloud-googleapis = { version = "0.16.1", features = ["pubsub"] }
env_logger = "0.11.8"
urlencoding = "2.1.3"
url = "2.5.4"
anyhow = "1.0.98"
bigdecimal = { version = "0.4.8", features = ["serde", "serde-json"] }
scraper = "0.23"
