[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = { version = "0.4.8", features = ["serde", "serde-json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.41"

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }

