[package]
name = "session_man"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
spider_chrome = { version = "2" }
chrono = "0.4.41"
dotenvy = "0.15.7"
env_logger = "0.11.8"
envy = "0.4.2"
futures = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["fs", "full", "signal"] }
